// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`processSSEEvent App-of-Apps Scenarios should handle app-of-apps with ownerReferences 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/app-of-apps->Application/argocd/appA",
      "source": "ApplicationSet/argocd/app-of-apps",
      "target": "Application/argocd/appA",
    },
    {
      "key": "Application/argocd/appA->Application/argocd/appB",
      "source": "Application/argocd/appA",
      "target": "Application/argocd/appB",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "app-of-apps",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "Application",
              "name": "appB",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "app-of-apps",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/app-of-apps",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent App-of-Apps Scenarios updates resources for a node on MODIFIED event, orphaning old children 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "Application/argocd/appA->Application/argocd/appC",
      "source": "Application/argocd/appA",
      "target": "Application/argocd/appC",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "Application",
              "name": "appC",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
        },
        "status": {
          "health": undefined,
          "sync": {
            "status": undefined,
          },
        },
      },
      "key": "Application/argocd/appB",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appC",
          "namespace": "argocd",
        },
        "status": {
          "health": undefined,
          "sync": {
            "status": undefined,
          },
        },
      },
      "key": "Application/argocd/appC",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent ApplicationSet Lifecycle correctly handles deletion of a node that is both a parent and a child 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/appset1->Application/argocd/appA",
      "source": "ApplicationSet/argocd/appset1",
      "target": "Application/argocd/appA",
    },
    {
      "key": "Application/argocd/appA->Application/argocd/appB",
      "source": "Application/argocd/appA",
      "target": "Application/argocd/appB",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset1",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "Application",
              "name": "appB",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset1",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/appset1",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent ApplicationSet Lifecycle correctly handles deletion of a node that is both a parent and a child 2`] = `
{
  "attributes": {},
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent ApplicationSet Lifecycle removes an ApplicationSet parent when it becomes orphaned 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/appset1->Application/argocd/appA",
      "source": "ApplicationSet/argocd/appset1",
      "target": "Application/argocd/appA",
    },
    {
      "key": "ApplicationSet/argocd/appset1->Application/argocd/appB",
      "source": "ApplicationSet/argocd/appset1",
      "target": "Application/argocd/appB",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset1",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset1",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/appset1",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset1",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent ApplicationSet Lifecycle removes an ApplicationSet parent when it becomes orphaned 2`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/appset1->Application/argocd/appB",
      "source": "ApplicationSet/argocd/appset1",
      "target": "Application/argocd/appB",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset1",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/appset1",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset1",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent ApplicationSet Lifecycle removes an ApplicationSet parent when it becomes orphaned 3`] = `
{
  "attributes": {},
  "edges": [],
  "nodes": [],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Basic Operations (Nodes & Edges) adds a simple application node 1`] = `
{
  "attributes": {},
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Basic Operations (Nodes & Edges) removes a node on DELETED 1`] = `
{
  "attributes": {},
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Basic Operations (Nodes & Edges) removes a node on DELETED 2`] = `
{
  "attributes": {},
  "edges": [],
  "nodes": [],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Basic Operations (Nodes & Edges) updates the attributes of an existing node on MODIFIED 1`] = `
{
  "attributes": {},
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Basic Operations (Nodes & Edges) updates the attributes of an existing node on MODIFIED 2`] = `
{
  "attributes": {},
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Progressing",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Edge Cases & Malformed Data handles cyclical dependencies gracefully 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "Application/argocd/appA->Application/argocd/appB",
      "source": "Application/argocd/appA",
      "target": "Application/argocd/appB",
    },
    {
      "key": "Application/argocd/appB->Application/argocd/appA",
      "source": "Application/argocd/appB",
      "target": "Application/argocd/appA",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "Application",
              "name": "appB",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "Application",
              "name": "appA",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Edge Cases & Malformed Data handles incomplete or malformed SSE payloads gracefully 1`] = `
{
  "attributes": {},
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appWithBadResource",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "Application",
              "name": null,
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appWithBadResource",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Edge Cases & Malformed Data handles self-referencing applications gracefully 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "Application/argocd/appA->Application/argocd/appA",
      "source": "Application/argocd/appA",
      "target": "Application/argocd/appA",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "Application",
              "name": "appA",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Race Conditions & Orphaned Nodes (issue #128) demonstrates race condition leaving orphaned ApplicationSet nodes 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/appset-03->Application/argocd/guestbook-app-04",
      "source": "ApplicationSet/argocd/appset-03",
      "target": "Application/argocd/guestbook-app-04",
    },
    {
      "key": "Application/argocd/app-of-apps-02->ApplicationSet/argocd/appset-03",
      "source": "Application/argocd/app-of-apps-02",
      "target": "ApplicationSet/argocd/appset-03",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "guestbook-app-04",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset-03",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/guestbook-app-04",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset-03",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/appset-03",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "app-of-apps-02",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "ApplicationSet",
              "name": "appset-03",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/app-of-apps-02",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Race Conditions & Orphaned Nodes (issue #128) demonstrates race condition leaving orphaned ApplicationSet nodes 2`] = `
{
  "attributes": {},
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "app-of-apps-02",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "ApplicationSet",
              "name": "appset-03",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/app-of-apps-02",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Race Conditions & Orphaned Nodes (issue #128) demonstrates race condition leaving orphaned ApplicationSet nodes 3`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "Application/argocd/app-of-apps-02->ApplicationSet/argocd/appset-03",
      "source": "Application/argocd/app-of-apps-02",
      "target": "ApplicationSet/argocd/appset-03",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "app-of-apps-02",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "ApplicationSet",
              "name": "appset-03",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/app-of-apps-02",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset-03",
          "namespace": "argocd",
        },
        "status": {
          "health": undefined,
          "sync": {
            "status": undefined,
          },
        },
      },
      "key": "ApplicationSet/argocd/appset-03",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Race Conditions & Orphaned Nodes (issue #128) preserves ApplicationSets with remaining children during deletion 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/appset-01->Application/argocd/child-app-A",
      "source": "ApplicationSet/argocd/appset-01",
      "target": "Application/argocd/child-app-A",
    },
    {
      "key": "ApplicationSet/argocd/appset-01->Application/argocd/child-app-B",
      "source": "ApplicationSet/argocd/appset-01",
      "target": "Application/argocd/child-app-B",
    },
    {
      "key": "Application/argocd/app-of-apps->ApplicationSet/argocd/appset-01",
      "source": "Application/argocd/app-of-apps",
      "target": "ApplicationSet/argocd/appset-01",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "child-app-A",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset-01",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/child-app-A",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset-01",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/appset-01",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "child-app-B",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset-01",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/child-app-B",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "app-of-apps",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "ApplicationSet",
              "name": "appset-01",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/app-of-apps",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Race Conditions & Orphaned Nodes (issue #128) preserves ApplicationSets with remaining children during deletion 2`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/appset-01->Application/argocd/child-app-A",
      "source": "ApplicationSet/argocd/appset-01",
      "target": "Application/argocd/child-app-A",
    },
    {
      "key": "ApplicationSet/argocd/appset-01->Application/argocd/child-app-B",
      "source": "ApplicationSet/argocd/appset-01",
      "target": "Application/argocd/child-app-B",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "child-app-A",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset-01",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/child-app-A",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset-01",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/appset-01",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "child-app-B",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset-01",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/child-app-B",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Resource and Ownership Handling (Edges) adds a node with ownerReferences, creating a parent 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/appset1->Application/argocd/appB",
      "source": "ApplicationSet/argocd/appset1",
      "target": "Application/argocd/appB",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset1",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset1",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/appset1",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Resource and Ownership Handling (Edges) adds an ApplicationSet referenced in resources 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "Application/argocd/appA->ApplicationSet/argocd/appset1",
      "source": "Application/argocd/appA",
      "target": "ApplicationSet/argocd/appset1",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "ApplicationSet",
              "name": "appset1",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset1",
          "namespace": "argocd",
        },
        "status": {
          "health": undefined,
          "sync": {
            "status": undefined,
          },
        },
      },
      "key": "ApplicationSet/argocd/appset1",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Resource and Ownership Handling (Edges) adds resources from status.resources as stub nodes 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "Application/argocd/appA->Application/argocd/appB",
      "source": "Application/argocd/appA",
      "target": "Application/argocd/appB",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "Application",
              "name": "appB",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
        },
        "status": {
          "health": undefined,
          "sync": {
            "status": undefined,
          },
        },
      },
      "key": "Application/argocd/appB",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Resource and Ownership Handling (Edges) handles resources in different namespaces correctly 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "Application/default/appA->Application/argocd/appB",
      "source": "Application/default/appA",
      "target": "Application/argocd/appB",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "default",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "kind": "Application",
              "name": "appB",
              "namespace": "argocd",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/default/appA",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Status & Attribute Updates handles change of ownership (ownerReference) 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/appset1->Application/argocd/appA",
      "source": "ApplicationSet/argocd/appset1",
      "target": "Application/argocd/appA",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset1",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset1",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/appset1",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Status & Attribute Updates handles change of ownership (ownerReference) 2`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "ApplicationSet/argocd/appset2->Application/argocd/appA",
      "source": "ApplicationSet/argocd/appset2",
      "target": "Application/argocd/appA",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
          "ownerReferences": [
            {
              "apiVersion": "argoproj.io/v1alpha1",
              "kind": "ApplicationSet",
              "name": "appset2",
            },
          ],
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "ApplicationSet",
        "metadata": {
          "name": "appset2",
          "namespace": "argocd",
        },
      },
      "key": "ApplicationSet/argocd/appset2",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Status & Attribute Updates updates a child's unknown status from a parent's resource definition 1`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "Application/argocd/appA->Application/argocd/appB",
      "source": "Application/argocd/appA",
      "target": "Application/argocd/appB",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "health": {
                "status": "Unknown",
              },
              "kind": "Application",
              "name": "appB",
              "namespace": "argocd",
              "status": "Unknown",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
        },
        "status": {
          "health": {
            "status": "Unknown",
          },
          "sync": {
            "status": "Unknown",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;

exports[`processSSEEvent Status & Attribute Updates updates a child's unknown status from a parent's resource definition 2`] = `
{
  "attributes": {},
  "edges": [
    {
      "key": "Application/argocd/appA->Application/argocd/appB",
      "source": "Application/argocd/appA",
      "target": "Application/argocd/appB",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appA",
          "namespace": "argocd",
        },
        "status": {
          "drift": "Conform",
          "health": {
            "status": "Healthy",
          },
          "resources": [
            {
              "health": {
                "status": "Healthy",
              },
              "kind": "Application",
              "name": "appB",
              "namespace": "argocd",
              "status": "Synced",
            },
          ],
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appA",
    },
    {
      "attributes": {
        "kind": "Application",
        "metadata": {
          "name": "appB",
          "namespace": "argocd",
        },
        "status": {
          "health": {
            "status": "Healthy",
          },
          "sync": {
            "status": "Synced",
          },
        },
      },
      "key": "Application/argocd/appB",
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "directed",
  },
}
`;
